# RIOT

./: Makefile.include
boards/native/: Makefile.dep  board_init.c
boards/nrf52840dk/: Kconfig
boards/nrf9160dk/: Makefile  Makefile.dep
core/lib/: assert.c  init.c
cpu/cortexm_common/: vectors_cortexm.c
cpu/efm32/: Makefile  Makefile.dep  Makefile.features  Makefile.include  hwcrypto_util.c
cpu/kinetis/: Kconfig  Makefile  Makefile.dep  Makefile.features  Makefile.include
cpu/native/: Makefile.dep  Makefile.features  Makefile.include
cpu/nrf51/: vectors.c
cpu/nrf52/: Kconfig  Makefile.features  Makefile.include  armcc_setup.c  cpu.c
cpu/nrf5x_common/: Kconfig  clock.c
cpu/nrf9160/: Makefile.dep  Makefile.include  cpu.c
drivers/atca/: atca.c
drivers/include/: atca.h
drivers/periph_common/: hwcrypto.c  init.c
examples/atecc608a_configure_and_lock/: Makefile  README.md  main.c
examples/blinky/: .gdb_history  Makefile  Makefile.board.dep  main.c  merge_flash.sh  merged_blinky.hex
examples/crypto-ewsn2020-cryptoauth-ecdh/: Makefile  main.c
examples/crypto-ewsn2020-cryptoauth-ecdsa/: main.c
examples/hello-world/: .gdb_history  CMakeLists.txt  Makefile  app.config  app.config.old  main.c  objdump_bl2  objdump_tfm_ns  objdump_tfm_s  sdk_config.h
examples/hello-world/cmake/: nrf5_common.cmake  nrf5_crypto.cmake
examples/psa-secure-elements/: Makefile  main.c
examples/psa_crypto/: Makefile  aead_aes_128.c  aes_cbc.c  app.config.test  app.config.test.smleg  ecdsa.c  hmac_sha256.c  main.c
ipsn22-code/aes-cbc/: app.config.test  main.c
ipsn22-code/aes-cbc-se/: Makefile  app.config.test  main.c
ipsn22-code/backend-combination/: app.config.test
ipsn22-code/combined-crypto/: Makefile  app.config.test  main.c
ipsn22-code/ecdsa-periph-se/: app.config.test
ipsn22-code/ecdsa-se/: Makefile  app.config.test  app.config.test.four  app.config.test.three  app.config.test.two  main.c
ipsn22-code/ecdsa-uecc/: Makefile  app.config.test  main.c
ipsn22-code/ecdsa_periph/: app.config.test  main.c
ipsn22-code/hmac_sha256/: app.config.test  app.config.test.multiple  main.c
ipsn22-code/hmac_sha256_se/: Makefile  main.c  (+1 more)
kconfigs/: Kconfig.features
makefiles/: pseudomodules.inc.mk  trusted_firmware_m.mk
pkg/: Kconfig
pkg/trusted_firmware_m/: CMakeLists.txt  Makefile  Makefile.dep  Makefile.include  doc.txt  symbol_renames.txt
pkg/trusted_firmware_m/contrib/: Makefile  interface.c  riot_nv_seed.c
pkg/trusted_firmware_m/interface/: Makefile  interface.c
riot_secure/: Makefile  main.c
sys/: Kconfig  Makefile  Makefile.dep
(+233 files in other folders)
